fixed alignment dropdown to appear top

--- a/src/components/toolbar/components/alignment/editor.scss
+++ b/src/components/toolbar/components/alignment/editor.scss
@@ -1,4 +1,7 @@
 .maxi-dropdown__alignment-content {
+	z-index: 99999999;
+	margin: -18px 0 0 91px !important;
+
 	.components-popover__content {
 		width: 75px;
 	}
